// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgramListPage correctly renders the loading page 1`] = `
<div>
  <div>
    <main
      id="content"
    >
      <div
        class="container my-4"
      >
        <div
          class="loading-spinner d-flex justify-content-center align-items-center"
        >
          <div
            class="spinner-border text-primary"
            role="status"
          >
            <span
              class="sr-only"
            >
              loading program enrollments
            </span>
          </div>
        </div>
      </div>
    </main>
    <footer
      aria-label="edX Home"
      class="footer d-flex justify-content-center border-top py-3 px-4"
      role="contentinfo"
    >
      <div
        class="container-fluid d-grid"
      >
        <div
          class="area-1"
        >
          <a
            aria-label="edX Home"
            href="https://edx.org"
          >
            <img
              alt="edX Logo"
              style="max-height: 45px;"
            />
          </a>
        </div>
        <div
          class="area-2"
        >
          <h2>
            edX
          </h2>
          <ul
            class="list-unstyled p-0 m-0"
          >
            <li>
              <a
                href="https://edx.org/about-us"
              >
                About
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/affiliate-program"
              >
                Affiliates
              </a>
            </li>
            <li>
              <a
                href="https://business.edx.org/?utm_campaign=edX.org+Referral&utm_medium=Footer&utm_source=localhost"
              >
                edX for Business
              </a>
            </li>
            <li>
              <a
                href="http://open.edx.org"
              >
                Open edX
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/careers"
              >
                Careers
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/news-announcements"
              >
                News
              </a>
            </li>
          </ul>
        </div>
        <div
          class="area-3"
        >
          <h2>
            Legal
          </h2>
          <ul
            class="list-unstyled p-0 m-0"
          >
            <li>
              <a
                href="https://edx.org/edx-terms-service"
              >
                Terms of Service & Honor Code
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/edx-privacy-policy"
              >
                Privacy Policy
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/accessibility"
              >
                Accessibility Policy
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/trademarks"
              >
                Trademark Policy
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/sitemap"
              >
                Sitemap
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/edx-privacy-policy/cookies"
              >
                Cookie Policy
              </a>
            </li>
            <li>
              <button
                class="px-0 text-left text-decoration-none btn btn-link btn-inline"
                id="footer-dns-link"
                type="button"
              >
                Your Privacy Choices
              </button>
            </li>
          </ul>
        </div>
        <div
          class="area-4"
        >
          <h2>
            Connect
          </h2>
          <ul
            class="list-unstyled p-0 m-0"
          >
            <li>
              <a
                href="https://www.edx.org/resources"
              >
                Idea Hub
              </a>
            </li>
            <li>
              <a
                href="https://courses.edx.org/support/contact_us"
              >
                Contact Us
              </a>
            </li>
            <li>
              <a
                href="https://support.edx.org"
              >
                Help Center
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/policy/security"
              >
                Security
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/media-kit"
              >
                Media Kit
              </a>
            </li>
          </ul>
        </div>
        <div
          class="area-5"
        >
          <ul
            class="d-flex flex-row justify-content-between list-unstyled max-width-222 p-0 mb-4"
          >
            <li>
              <a
                href="http://www.facebook.com/EdxOnline"
                rel="noopener noreferrer"
                target="_blank"
                title="Facebook"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-square-facebook fa-w-14 fa-2x social-icon"
                  data-icon="square-facebook"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64h98.2V334.2H109.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H255V480H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Like edX on Facebook
                </span>
              </a>
            </li>
            <li>
              <a
                href="https://twitter.com/edXOnline"
                rel="noopener noreferrer"
                target="_blank"
                title="Twitter"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-square-twitter fa-w-14 fa-2x social-icon"
                  data-icon="square-twitter"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM351.3 199.3v0c0 86.7-66 186.6-186.6 186.6c-37.2 0-71.7-10.8-100.7-29.4c5.3 .6 10.4 .8 15.8 .8c30.7 0 58.9-10.4 81.4-28c-28.8-.6-53-19.5-61.3-45.5c10.1 1.5 19.2 1.5 29.6-1.2c-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3c-9-6-16.4-14.1-21.5-23.6s-7.8-20.2-7.7-31c0-12.2 3.2-23.4 8.9-33.1c32.3 39.8 80.8 65.8 135.2 68.6c-9.3-44.5 24-80.6 64-80.6c18.9 0 35.9 7.9 47.9 20.7c14.8-2.8 29-8.3 41.6-15.8c-4.9 15.2-15.2 28-28.8 36.1c13.2-1.4 26-5.1 37.8-10.2c-8.9 13.1-20.1 24.7-32.9 34c.2 2.8 .2 5.7 .2 8.5z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Follow edX on Twitter
                </span>
              </a>
            </li>
            <li>
              <a
                href="http://www.linkedin.com/company/edx"
                rel="noopener noreferrer"
                target="_blank"
                title="LinkedIn"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-linkedin fa-w-14 fa-2x social-icon"
                  data-icon="linkedin"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Follow edX on LinkedIn
                </span>
              </a>
            </li>
            <li>
              <a
                href="https://www.instagram.com/edxonline/"
                rel="noopener noreferrer"
                target="_blank"
                title="Instagram"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-instagram fa-w-14 fa-2x social-icon"
                  data-icon="instagram"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Follow edX on Instagram
                </span>
              </a>
            </li>
            <li>
              <a
                href="http://www.reddit.com/r/edx"
                rel="noopener noreferrer"
                target="_blank"
                title="Reddit"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-square-reddit fa-w-14 fa-2x social-icon"
                  data-icon="square-reddit"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 32l320 0c35.3 0 64 28.7 64 64l0 320c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 96C0 60.7 28.7 32 64 32zM305.9 166.4c20.6 0 37.3-16.7 37.3-37.3s-16.7-37.3-37.3-37.3c-18 0-33.1 12.8-36.6 29.8c-30.2 3.2-53.8 28.8-53.8 59.9l0 .2c-32.8 1.4-62.8 10.7-86.6 25.5c-8.8-6.8-19.9-10.9-32-10.9c-28.9 0-52.3 23.4-52.3 52.3c0 21 12.3 39 30.1 47.4c1.7 60.7 67.9 109.6 149.3 109.6s147.6-48.9 149.3-109.7c17.7-8.4 29.9-26.4 29.9-47.3c0-28.9-23.4-52.3-52.3-52.3c-12 0-23 4-31.9 10.8c-24-14.9-54.3-24.2-87.5-25.4l0-.1c0-22.2 16.5-40.7 37.9-43.7l0 0c3.9 16.5 18.7 28.7 36.3 28.7zM155 248.1c14.6 0 25.8 15.4 25 34.4s-11.8 25.9-26.5 25.9s-27.5-7.7-26.6-26.7s13.5-33.5 28.1-33.5zm166.4 33.5c.9 19-12 26.7-26.6 26.7s-25.6-6.9-26.5-25.9c-.9-19 10.3-34.4 25-34.4s27.3 14.6 28.1 33.5zm-42.1 49.6c-9 21.5-30.3 36.7-55.1 36.7s-46.1-15.1-55.1-36.7c-1.1-2.6 .7-5.4 3.4-5.7c16.1-1.6 33.5-2.5 51.7-2.5s35.6 .9 51.7 2.5c2.7 .3 4.5 3.1 3.4 5.7z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Subscribe to the edX subreddit
                </span>
              </a>
            </li>
          </ul>
          <ul
            class="d-flex flex-row justify-content-between list-unstyled max-width-264 p-0 mb-5"
          >
            <li>
              <a
                href="https://play.google.com/store/apps/details?id=org.edx.mobile"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt="Download the edX mobile app from Google Play"
                  class="max-height-39"
                  src="https://prod-edxapp.edx-cdn.org/static/images/app/google_play_badge_45.6ea466e328da.png"
                />
              </a>
            </li>
            <li>
              <a
                href="https://itunes.apple.com/us/app/edx/id945480667?mt=8"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt="Download the edX mobile app from the Apple App Store"
                  class="max-height-39"
                  src="https://prod-edxapp.edx-cdn.org/static/images/app/app_store_badge_135x40.d0558d910630.svg"
                />
              </a>
            </li>
          </ul>
          <p>
            © 
            2024
             edX LLC. All rights reserved.
            <br />
            深圳市恒宇博科技有限公司 
            <a
              href="https://beian.miit.gov.cn"
              style="text-decoration: underline;"
            >
              粤ICP备17044299号-2
            </a>
          </p>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`ProgramListPage renders fetching program error page when there are issues fetching the user programs 1`] = `
<div>
  <div>
    <main
      id="content"
    >
      <div
        class="container my-4"
      >
        <div
          class="fade alert-content alert alert-danger show"
          role="alert"
        >
          <span
            class="pgn__icon alert-icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 21h22L12 2 1 21Zm12-3h-2v-2h2v2Zm0-4h-2v-4h2v4Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            class="pgn__alert-message-wrapper"
          >
            <div
              class="alert-message-content"
            >
              An error occurred while fetching your program enrollments. Please try again later.
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      aria-label="edX Home"
      class="footer d-flex justify-content-center border-top py-3 px-4"
      role="contentinfo"
    >
      <div
        class="container-fluid d-grid"
      >
        <div
          class="area-1"
        >
          <a
            aria-label="edX Home"
            href="https://edx.org"
          >
            <img
              alt="edX Logo"
              style="max-height: 45px;"
            />
          </a>
        </div>
        <div
          class="area-2"
        >
          <h2>
            edX
          </h2>
          <ul
            class="list-unstyled p-0 m-0"
          >
            <li>
              <a
                href="https://edx.org/about-us"
              >
                About
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/affiliate-program"
              >
                Affiliates
              </a>
            </li>
            <li>
              <a
                href="https://business.edx.org/?utm_campaign=edX.org+Referral&utm_medium=Footer&utm_source=localhost"
              >
                edX for Business
              </a>
            </li>
            <li>
              <a
                href="http://open.edx.org"
              >
                Open edX
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/careers"
              >
                Careers
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/news-announcements"
              >
                News
              </a>
            </li>
          </ul>
        </div>
        <div
          class="area-3"
        >
          <h2>
            Legal
          </h2>
          <ul
            class="list-unstyled p-0 m-0"
          >
            <li>
              <a
                href="https://edx.org/edx-terms-service"
              >
                Terms of Service & Honor Code
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/edx-privacy-policy"
              >
                Privacy Policy
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/accessibility"
              >
                Accessibility Policy
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/trademarks"
              >
                Trademark Policy
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/sitemap"
              >
                Sitemap
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/edx-privacy-policy/cookies"
              >
                Cookie Policy
              </a>
            </li>
            <li>
              <button
                class="px-0 text-left text-decoration-none btn btn-link btn-inline"
                id="footer-dns-link"
                type="button"
              >
                Your Privacy Choices
              </button>
            </li>
          </ul>
        </div>
        <div
          class="area-4"
        >
          <h2>
            Connect
          </h2>
          <ul
            class="list-unstyled p-0 m-0"
          >
            <li>
              <a
                href="https://www.edx.org/resources"
              >
                Idea Hub
              </a>
            </li>
            <li>
              <a
                href="https://courses.edx.org/support/contact_us"
              >
                Contact Us
              </a>
            </li>
            <li>
              <a
                href="https://support.edx.org"
              >
                Help Center
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/policy/security"
              >
                Security
              </a>
            </li>
            <li>
              <a
                href="https://edx.org/media-kit"
              >
                Media Kit
              </a>
            </li>
          </ul>
        </div>
        <div
          class="area-5"
        >
          <ul
            class="d-flex flex-row justify-content-between list-unstyled max-width-222 p-0 mb-4"
          >
            <li>
              <a
                href="http://www.facebook.com/EdxOnline"
                rel="noopener noreferrer"
                target="_blank"
                title="Facebook"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-square-facebook fa-w-14 fa-2x social-icon"
                  data-icon="square-facebook"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64h98.2V334.2H109.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H255V480H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Like edX on Facebook
                </span>
              </a>
            </li>
            <li>
              <a
                href="https://twitter.com/edXOnline"
                rel="noopener noreferrer"
                target="_blank"
                title="Twitter"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-square-twitter fa-w-14 fa-2x social-icon"
                  data-icon="square-twitter"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM351.3 199.3v0c0 86.7-66 186.6-186.6 186.6c-37.2 0-71.7-10.8-100.7-29.4c5.3 .6 10.4 .8 15.8 .8c30.7 0 58.9-10.4 81.4-28c-28.8-.6-53-19.5-61.3-45.5c10.1 1.5 19.2 1.5 29.6-1.2c-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3c-9-6-16.4-14.1-21.5-23.6s-7.8-20.2-7.7-31c0-12.2 3.2-23.4 8.9-33.1c32.3 39.8 80.8 65.8 135.2 68.6c-9.3-44.5 24-80.6 64-80.6c18.9 0 35.9 7.9 47.9 20.7c14.8-2.8 29-8.3 41.6-15.8c-4.9 15.2-15.2 28-28.8 36.1c13.2-1.4 26-5.1 37.8-10.2c-8.9 13.1-20.1 24.7-32.9 34c.2 2.8 .2 5.7 .2 8.5z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Follow edX on Twitter
                </span>
              </a>
            </li>
            <li>
              <a
                href="http://www.linkedin.com/company/edx"
                rel="noopener noreferrer"
                target="_blank"
                title="LinkedIn"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-linkedin fa-w-14 fa-2x social-icon"
                  data-icon="linkedin"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Follow edX on LinkedIn
                </span>
              </a>
            </li>
            <li>
              <a
                href="https://www.instagram.com/edxonline/"
                rel="noopener noreferrer"
                target="_blank"
                title="Instagram"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-instagram fa-w-14 fa-2x social-icon"
                  data-icon="instagram"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Follow edX on Instagram
                </span>
              </a>
            </li>
            <li>
              <a
                href="http://www.reddit.com/r/edx"
                rel="noopener noreferrer"
                target="_blank"
                title="Reddit"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-square-reddit fa-w-14 fa-2x social-icon"
                  data-icon="square-reddit"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 32l320 0c35.3 0 64 28.7 64 64l0 320c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 96C0 60.7 28.7 32 64 32zM305.9 166.4c20.6 0 37.3-16.7 37.3-37.3s-16.7-37.3-37.3-37.3c-18 0-33.1 12.8-36.6 29.8c-30.2 3.2-53.8 28.8-53.8 59.9l0 .2c-32.8 1.4-62.8 10.7-86.6 25.5c-8.8-6.8-19.9-10.9-32-10.9c-28.9 0-52.3 23.4-52.3 52.3c0 21 12.3 39 30.1 47.4c1.7 60.7 67.9 109.6 149.3 109.6s147.6-48.9 149.3-109.7c17.7-8.4 29.9-26.4 29.9-47.3c0-28.9-23.4-52.3-52.3-52.3c-12 0-23 4-31.9 10.8c-24-14.9-54.3-24.2-87.5-25.4l0-.1c0-22.2 16.5-40.7 37.9-43.7l0 0c3.9 16.5 18.7 28.7 36.3 28.7zM155 248.1c14.6 0 25.8 15.4 25 34.4s-11.8 25.9-26.5 25.9s-27.5-7.7-26.6-26.7s13.5-33.5 28.1-33.5zm166.4 33.5c.9 19-12 26.7-26.6 26.7s-25.6-6.9-26.5-25.9c-.9-19 10.3-34.4 25-34.4s27.3 14.6 28.1 33.5zm-42.1 49.6c-9 21.5-30.3 36.7-55.1 36.7s-46.1-15.1-55.1-36.7c-1.1-2.6 .7-5.4 3.4-5.7c16.1-1.6 33.5-2.5 51.7-2.5s35.6 .9 51.7 2.5c2.7 .3 4.5 3.1 3.4 5.7z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Subscribe to the edX subreddit
                </span>
              </a>
            </li>
          </ul>
          <ul
            class="d-flex flex-row justify-content-between list-unstyled max-width-264 p-0 mb-5"
          >
            <li>
              <a
                href="https://play.google.com/store/apps/details?id=org.edx.mobile"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt="Download the edX mobile app from Google Play"
                  class="max-height-39"
                  src="https://prod-edxapp.edx-cdn.org/static/images/app/google_play_badge_45.6ea466e328da.png"
                />
              </a>
            </li>
            <li>
              <a
                href="https://itunes.apple.com/us/app/edx/id945480667?mt=8"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt="Download the edX mobile app from the Apple App Store"
                  class="max-height-39"
                  src="https://prod-edxapp.edx-cdn.org/static/images/app/app_store_badge_135x40.d0558d910630.svg"
                />
              </a>
            </li>
          </ul>
          <p>
            © 
            2024
             edX LLC. All rights reserved.
            <br />
            深圳市恒宇博科技有限公司 
            <a
              href="https://beian.miit.gov.cn"
              style="text-decoration: underline;"
            >
              粤ICP备17044299号-2
            </a>
          </p>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
